--- a/code.html
+++ b/code.html
@@ -44,14 +44,14 @@
     <!-- add a mobile-responsive png-->
     <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9">
       <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-        <a href="#">
-          <img class="image" src="/images/med/comingsoon.png">
+        <a href="https://angularjsdemoapp.herokuapp.com">
+          <img class="image" src="/images/med/angularjsdemoapp.png">
         </a>
       </div>
 
       <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-        <p class="annotation"><a href="#"></a>An Angular.js project and a blog post about front-end frameworks.</p>
-        <p class="">Source code & documentation: coming soon<a href="#"></a></p>
+        <p class="annotation">A basic <a href="https://angularjsdemoapp.herokuapp.com">Angular.js to-do list app</a>. Updates coming soon.</p>
+        <p class="">Source code & documentation: <a href="https://github.com/pchubinskiy/angular_to_do_list">angular_to_do_list</a></p>
       </div>
     </div>
 
