--- a/test/artdesign.html
+++ b/test/artdesign.html
@@ -51,6 +51,19 @@
       </div>
     </div>
 
+    <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9 col-sm-12 col-xs-12">
+      <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+        <a href="/images/SOLA_brand_board.jpg">
+          <img class="artdesign" src="/images/SOLA_brand_board.jpg" style="">
+        </a>
+      </div>
+
+      <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+        <p class="annotation"><a href=""></a></p>
+        <p class="">A mood board I created for a fictional brand.<a href=""></a></p>
+      </div>
+    </div>
+
     <!-- <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9 col-sm-12 col-xs-12">
       <div class="col-lg-6">
         <a href="/images/artdesign_fullsize/noexitcover.jpg">
