--- a/test/code.html
+++ b/test/code.html
@@ -110,7 +110,7 @@
     <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9">
       <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
         <a href="http://www.lrngo.com/coolstuff">
-          <img class="image" src="/images/lrngo_landing_pages/med/lrngo_desktop_and_mobile.png">
+          <img class="" src="/images/lrngo_landing_pages/med/lrngo_desktop_and_mobile.png">
         </a>
       </div>
 
