--- a/code.html
+++ b/code.html
@@ -91,7 +91,7 @@
       </div>
 
       <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-        <p class="annotation">Full-stack <a href="http://pantrydotio.herokuapp.com/">Rails app</a> made for a group project during week 06/12 of WDI.</p>
+        <p class="annotation">Full-stack leftovers-to-recipe-recommendation<a href="http://pantrydotio.herokuapp.com/">Rails app</a> made for a group project during week 06/12 of WDI.</p>
         <p class="">Source code & documentation: <a href="https://github.com/pchubinskiy/pantry">pantry</a></p>
       </div>
     </div>
