--- a/code.html
+++ b/code.html
@@ -91,7 +91,7 @@
       </div>
 
       <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-        <p class="annotation">Full-stack leftovers-to-recipe-recommendation<a href="http://pantrydotio.herokuapp.com/">Rails app</a> made for a group project during week 06/12 of WDI.</p>
+        <p class="annotation">Full-stack leftovers-to-recipe-recommendation <a href="http://pantrydotio.herokuapp.com/">Rails app</a> made for a group project during week 06/12 of WDI.</p>
         <p class="">Source code & documentation: <a href="https://github.com/pchubinskiy/pantry">pantry</a></p>
       </div>
     </div>
@@ -118,7 +118,7 @@
 
       <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
         <p class="annotation">
-          <p><a href="http://www.lrngo.com/coolstuff">Landing pages I designed</a> for Lrngo, where I also did back-end work in PHP/Zend.</p>
+          <p><a href="http://www.lrngo.com/coolstuff">Landing pages I designed</a> for Lrngo, where I also worked in Javascript, PHP, and Zend.</p>
         </p>
       </div>
     </div>
