--- a/code.html
+++ b/code.html
@@ -62,7 +62,7 @@
       </div>
 
       <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-        <p class="annotation"><a href="https://angularjsdemoapp.herokuapp.com">Angular.js to-do list app</a>.</p>
+        <p class="annotation">Angular.js <a href="https://angularjsdemoapp.herokuapp.com">to-do list app</a>.</p>
         <p class="">Source code & documentation: <a href="https://github.com/pchubinskiy/angular_to_do_list">angular_to_do_list</a></p>
       </div>
     </div>
