--- a/artdesign.html
+++ b/artdesign.html
@@ -84,6 +84,19 @@
 
     <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9 col-sm-12 col-xs-12">
       <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+        <a href="/images/artdesign_fullsize/wccccatering_brnz.png">
+          <img class="artdesign" src="/images/wccccatering_brnz_min.png" style="">
+        </a>
+      </div>
+
+      <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+        <p class="annotation"><a href=""></a></p>
+        <p class="">An iteration of a logo I created for World Class Coffee Catering.<a href=""></a></p>
+      </div>
+    </div>
+
+    <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9 col-sm-12 col-xs-12">
+      <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
         <a href="/images/artdesign_fullsize/wccclogoletters.png">
           <img class="artdesign" src="/images/wccclogoletters_min.png" style="">
         </a>
