--- a/otherart.html
+++ b/otherart.html
@@ -42,14 +42,14 @@
 
     <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9 col-sm-12 col-xs-12">
       <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-        <a href="/images/artdesign_fullsize/oncuecover5.jpg">
-          <img class="artdesign" src="/images/oncuecover5_min.jpg" style="">
+        <a href="">
+          <img class="artdesign" src="/images/otherart/car.jpg" style="">
         </a>
       </div>
 
       <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
         <p class="annotation"><a href=""></a></p>
-        <p class="">A collage of magazine snippets designed as a book or album cover; edited in Photoshop.<a href=""></a></p>
+        <p class=""><a href=""></a></p>
       </div>
     </div>
 
@@ -71,27 +71,27 @@
 
     <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9 col-sm-12 col-xs-12">
       <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-        <a href="/images/artdesign_fullsize/wccccatering.png">
-          <img class="artdesign" src="/images/wccccatering_min.png" style="">
+        <a href="">
+          <img class="artdesign" src="/images/otherart/windows.jpg" style="">
         </a>
       </div>
 
       <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
         <p class="annotation"><a href=""></a></p>
-        <p class="">An iteration of a logo I created for World Class Coffee Catering.<a href=""></a></p>
+        <p class=""><a href=""></a></p>
       </div>
     </div>
 
     <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9 col-sm-12 col-xs-12">
       <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-        <a href="/images/artdesign_fullsize/wccccatering_brnz.png">
-          <img class="artdesign" src="/images/wccccatering_brnz_min.png" style="">
+        <a href="">
+          <img class="artdesign" src="/images/otherart/girl.jpg" style="">
         </a>
       </div>
 
       <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
         <p class="annotation"><a href=""></a></p>
-        <p class="">An iteration of a logo I created for World Class Coffee Catering.<a href=""></a></p>
+        <p class=""><a href=""></a></p>
       </div>
     </div>
 
@@ -173,16 +173,16 @@
       </div>
     </div> -->
 
-    <!-- <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9 col-sm-12 col-xs-12">
+    <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9 col-sm-12 col-xs-12">
       <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
            <iframe class="artdesign" src="https://player.vimeo.com/video/158437381" width="300" height="" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
       </div>
 
       <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
         <p class="annotation"><a href="https://vimeo.com/158437381">Engendering</a> from <a href="https://vimeo.com/user24324093">P Chubinskiy</a> on <a href="https://vimeo.com">Vimeo</a>.</p>
-        <p class="">A film themed around gender that I shot and edited.<a href=""></a></p>
+        <p class="">A film exploring gender that I shot and edited.<a href=""></a></p>
       </div>
-    </div> -->
+    </div>
 
     <!--<img src="/images/noexitcover.jpg" style="" class="col-lg-12 col-md-12 col-md-12 col-sm-12 col-xs-12">
     <span style="display: block;">* change the font here *</span>
