--- a/otherart.html
+++ b/otherart.html
@@ -95,83 +95,96 @@
       </div>
     </div>
 
-<!--     <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9 col-sm-12 col-xs-12">
-      <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-        <a href="/images/artdesign_fullsize/wccclogoletters.png">
-          <img class="artdesign" src="/images/wccclogoletters_min.png" style="">
-        </a>
-      </div>
-
-      <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-        <p class="annotation"><a href=""></a></p>
-        <p class="">An iteration of a logo I created for World Class Coffee Catering.<a href=""></a></p>
-      </div>
-    </div> -->
-
     <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9 col-sm-12 col-xs-12">
       <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-        <a href="/images/artdesign_fullsize/collage.jpg">
-          <img class="artdesign" src="/images/collage_min.jpg" style="">
+        <a href="">
+          <img class="artdesign" src="/images/otherart/graffiti.jpg" style="">
         </a>
       </div>
 
       <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
         <p class="annotation"><a href=""></a></p>
-        <p class="">A collage I made for an experimental drawing class assignment.<a href=""></a></p>
+        <p class=""><a href=""></a></p>
       </div>
     </div>
 
     <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9 col-sm-12 col-xs-12">
       <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-        <a href="/images/artdesign_fullsize/bw_figure_full.jpg">
-          <img class="artdesign" src="/images/bw_figure_min.jpg" style="">
+        <a href="">
+          <img class="artdesign" src="/images/otherart/operawater.jpg" style="">
         </a>
       </div>
 
       <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
         <p class="annotation"><a href=""></a></p>
-        <p class="">A figure drawing I did for a class assignment.<a href=""></a></p>
+        <p class=""><a href=""></a></p>
       </div>
     </div>
 
     <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9 col-sm-12 col-xs-12">
       <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-        <a href="/images/artdesign_fullsize/bw_figure2_full.jpg">
-          <img class="artdesign" src="/images/bw_figure2_min.jpg" style="">
+        <a href="">
+          <img class="artdesign" src="/images/otherart/playgroundwater.jpg" style="">
         </a>
       </div>
 
       <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
         <p class="annotation"><a href=""></a></p>
-        <p class="">A figure drawing I did for a class assignment.<a href=""></a></p>
+        <p class=""><a href=""></a></p>
       </div>
     </div>
 
-    <!-- <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9 col-sm-12 col-xs-12">
-      <div class="col-lg-6">
-        <a href="/images/artdesign_fullsize/.jpg">
-          <img src="/images/landscape_fiction_min.jpg" style="">
+    <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9 col-sm-12 col-xs-12">
+      <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+        <a href="">
+          <img class="artdesign" src="/images/otherart/poolslide.jpg" style="">
         </a>
       </div>
 
-      <div class="col-lg-6">
+      <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
         <p class="annotation"><a href=""></a></p>
-        <p class="">#: <a href="#">#</a></p>
+        <p class=""><a href=""></a></p>
       </div>
     </div>
 
     <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9 col-sm-12 col-xs-12">
       <div class="col-lg-6">
-        <a href="/images/artdesign_fullsize/.jpg">
-          <img src="/images/figure3_min.jpg" style="">
+        <a href="">
+          <img src="/images/otherart/skateboarders.jpg" style="">
         </a>
       </div>
 
       <div class="col-lg-6">
         <p class="annotation"><a href=""></a></p>
-        <p class="">#: <a href="#">#</a></p>
+        <p class=""><a href="#"></a></p>
       </div>
-    </div> -->
+    </div>
+
+    <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9 col-sm-12 col-xs-12">
+      <div class="col-lg-6">
+        <a href="">
+          <img src="/images/otherart/utilitypole.jpg" style="">
+        </a>
+      </div>
+
+      <div class="col-lg-6">
+        <p class="annotation"><a href=""></a></p>
+        <p class=""><a href="#"></a></p>
+      </div>
+    </div>
+
+    <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9 col-sm-12 col-xs-12">
+      <div class="col-lg-6">
+        <a href="">
+          <img src="/images/otherart/foglights.jpg" style="">
+        </a>
+      </div>
+
+      <div class="col-lg-6">
+        <p class="annotation"><a href=""></a></p>
+        <p class=""><a href="#"></a></p>
+      </div>
+    </div>
 
     <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9 col-sm-12 col-xs-12">
       <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
