--- a/otherart.html
+++ b/otherart.html
@@ -148,7 +148,7 @@
     </div>
 
     <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9 col-sm-12 col-xs-12">
-      <div class="col-lg-6">
+      <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
         <a href="">
           <img src="/images/otherart/skateboarders.jpg" style="">
         </a>
@@ -161,7 +161,7 @@
     </div>
 
     <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9 col-sm-12 col-xs-12">
-      <div class="col-lg-6">
+      <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
         <a href="">
           <img src="/images/otherart/utilitypole.jpg" style="">
         </a>
@@ -174,7 +174,7 @@
     </div>
 
     <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9 col-sm-12 col-xs-12">
-      <div class="col-lg-6">
+      <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
         <a href="">
           <img src="/images/otherart/foglights.jpg" style="">
         </a>
