--- a/artdesign.html
+++ b/artdesign.html
@@ -147,52 +147,6 @@
       </div>
     </div>
 
-    <!-- <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9 col-sm-12 col-xs-12">
-      <div class="col-lg-6">
-        <a href="/images/artdesign_fullsize/.jpg">
-          <img src="/images/landscape_fiction_min.jpg" style="">
-        </a>
-      </div>
-
-      <div class="col-lg-6">
-        <p class="annotation"><a href=""></a></p>
-        <p class="">#: <a href="#">#</a></p>
-      </div>
-    </div>
-
-    <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9 col-sm-12 col-xs-12">
-      <div class="col-lg-6">
-        <a href="/images/artdesign_fullsize/.jpg">
-          <img src="/images/figure3_min.jpg" style="">
-        </a>
-      </div>
-
-      <div class="col-lg-6">
-        <p class="annotation"><a href=""></a></p>
-        <p class="">#: <a href="#">#</a></p>
-      </div>
-    </div> -->
-
-    <!-- <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9 col-sm-12 col-xs-12">
-      <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-           <iframe class="artdesign" src="https://player.vimeo.com/video/158437381" width="300" height="" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-      </div>
-
-      <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-        <p class="annotation"><a href="https://vimeo.com/158437381">Engendering</a> from <a href="https://vimeo.com/user24324093">P Chubinskiy</a> on <a href="https://vimeo.com">Vimeo</a>.</p>
-        <p class="">A film themed around gender that I shot and edited.<a href=""></a></p>
-      </div>
-    </div> -->
-
-    <!--<img src="/images/noexitcover.jpg" style="" class="col-lg-12 col-md-12 col-md-12 col-sm-12 col-xs-12">
-    <span style="display: block;">* change the font here *</span>
-    <img src="collage.jpg" style="width: 40%;">
-    <img src="/images/wccccatering.png" style="" class="col-lg-6 col-md-6 col-md-6 col-sm-6 col-xs-6">
-    <img src="/images/wccclogoletters.png" style="" class="col-lg-6 col-md-6 col-md-6 col-sm-6 col-xs-6">
-
-     <iframe id="film" src="https://player.vimeo.com/video/126012689" class="" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-    <p><a href="https://vimeo.com/126012689">engendering</a> from <a href="https://vimeo.com/user24324093">P Chubinskiy</a> on <a href="https://vimeo.com">Vimeo</a>.</p>-->
-
     <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9 col-sm-12 col-xs-12">
       <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
         <a href="">
@@ -202,7 +156,7 @@
 
       <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
         <p class="annotation"><a href=""></a></p>
-        <p class=""><a href=""></a></p>
+        <p class="">From here on down: a series of design-inspired photographs that I took.<a href=""></a></p>
       </div>
     </div>
 
@@ -219,29 +173,16 @@
       </div>
     </div>
 
-<!--     <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9 col-sm-12 col-xs-12">
-      <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-        <a href="">
-          <img class="artdesign" src="/images/otherart/graffiti.jpg" style="">
-        </a>
-      </div>
-
-      <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-        <p class="annotation"><a href=""></a></p>
-        <p class=""><a href=""></a></p>
-      </div>
-    </div> -->
-
     <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9 col-sm-12 col-xs-12">
       <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
         <a href="">
-          <img class="artdesign" src="/images/otherart/girl.jpg" style="">
+          <img class="artdesign" src="/images/otherart/foglights.jpg" style="">
         </a>
       </div>
 
-      <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+      <div class="col-lg-6">
         <p class="annotation"><a href=""></a></p>
-        <p class=""><a href=""></a></p>
+        <p class=""><a href="#"></a></p>
       </div>
     </div>
 
@@ -270,6 +211,32 @@
         <p class=""><a href=""></a></p>
       </div>
     </div> -->
+
+    <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9 col-sm-12 col-xs-12">
+      <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+        <a href="">
+          <img class="artdesign" src="/images/otherart/poolslide.jpg" style="">
+        </a>
+      </div>
+
+      <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+        <p class="annotation"><a href=""></a></p>
+        <p class=""><a href=""></a></p>
+      </div>
+    </div>
+
+    <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9 col-sm-12 col-xs-12">
+      <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+        <a href="">
+          <img class="artdesign" src="/images/otherart/utilitypole.jpg" style="">
+        </a>
+      </div>
+
+      <div class="col-lg-6">
+        <p class="annotation"><a href=""></a></p>
+        <p class=""><a href="#"></a></p>
+      </div>
+    </div>
 
     <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9 col-sm-12 col-xs-12">
       <p class="col-lg-9 copyright">Copyright notice: All art and design copyright Pavlo Chubinskiy &copy;</p>
