--- a/resume.html
+++ b/resume.html
@@ -45,7 +45,7 @@
   </div>-->
 
   <div id="content" class="col-lg-offset-4 col-md-offset-4 col-lg-6 col-md-6 col-sm-11 col-xs-11">
-    <p><a href="/pdfs/resume_paul_chubinskiy.pdf">PDF</a></p>
+    <p><a href="/pdfs/resume.pdf">PDF</a></p>
     <p><a href="/pdfs/resume_paul_chubinskiy.docx">Word</a></p>
     <br>
     <br>
