--- a/resume.html
+++ b/resume.html
@@ -34,7 +34,7 @@
     <p><a href="index.html">About Me</a></p>
     <p><a href="web.html">Web</a></p>
     <!--<p><a href="writing.html">Writing</a></p>-->
-    <p><a href="artdesign.html">Art & Design</a></p>
+    <p><a href="design.html">Graphic Design</a></p>
     <p><a href="resume.html">Resume</a></p>
     <p><a href="contact.html">Contact</a></p>
   </div>
