--- a/writing.html
+++ b/writing.html
@@ -33,7 +33,7 @@
     <p id="name">P. Chubinskiy</p>
     <p><a href="index.html">About Me</a></p>
     <p><a href="web.html">Web</a></p>
-    <p><a href="artdesign.html">Art & Design</a></p>
+    <p><a href="design.html">Graphic Design</a></p>
     <p><a href="/pdfs/resume.pdf">Resume</a></p>
     <p><a href="contact.html">Contact</a></p>
   </div>
