--- a/otherart.html
+++ b/otherart.html
@@ -163,7 +163,7 @@
       </div>
 
       <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-        <p class="annotation">Brand board.<a href=""></a></p>
+        <p class="annotation"><a href=""></a></p>
         <p class=""><a href=""></a></p>
       </div>
     </div>
@@ -176,7 +176,7 @@
       </div>
 
       <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-        <p class="annotation">Brand board.<a href=""></a></p>
+        <p class="annotation"><a href=""></a></p>
         <p class=""><a href=""></a></p>
       </div>
     </div>
@@ -189,7 +189,7 @@
       </div>
 
       <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-        <p class="annotation">Brand board.<a href=""></a></p>
+        <p class="annotation"><a href=""></a></p>
         <p class=""><a href=""></a></p>
       </div>
     </div>
@@ -202,7 +202,7 @@
       </div>
 
       <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-        <p class="annotation">Brand board.<a href=""></a></p>
+        <p class="annotation"><a href=""></a></p>
         <p class=""><a href=""></a></p>
       </div>
     </div>
