--- a/otherart.html
+++ b/otherart.html
@@ -139,7 +139,7 @@
       </div>
 
       <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-        <p class="annotation">Brand board.<a href=""></a></p>
+        <p class="annotation">Brand board<a href=""></a></p>
         <p class=""><a href=""></a></p>
       </div>
     </div>
@@ -163,7 +163,7 @@
       </div>
 
       <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-        <p class="annotation"><a href=""></a></p>
+        <p class="annotation">Conceptual art<a href=""></a></p>
         <p class=""><a href=""></a></p>
       </div>
     </div>
