--- a/otherart.html
+++ b/otherart.html
@@ -237,7 +237,7 @@
       </div>
     </div>
 
-<!--     <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9 col-sm-12 col-xs-12">
+    <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9 col-sm-12 col-xs-12">
       <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
         <a href="">
           <img class="artdesign" src="/images/otherart/graffiti.jpg" style="">
@@ -248,7 +248,7 @@
         <p class="annotation"><a href=""></a></p>
         <p class=""><a href=""></a></p>
       </div>
-    </div> -->
+    </div>
 
     <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9 col-sm-12 col-xs-12">
       <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
@@ -276,7 +276,7 @@
       </div>
     </div>
 
-<!--     <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9 col-sm-12 col-xs-12">
+    <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9 col-sm-12 col-xs-12">
       <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
         <a href="">
           <img class="artdesign" src="/images/otherart/playgroundwater.jpg" style="">
@@ -287,7 +287,7 @@
         <p class="annotation"><a href=""></a></p>
         <p class=""><a href=""></a></p>
       </div>
-    </div> -->
+    </div>
 
     <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9 col-sm-12 col-xs-12">
       <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
@@ -340,15 +340,6 @@
         <p class=""><a href="#"></a></p>
       </div>
     </div>
-
-    <!--<img src="/images/noexitcover.jpg" style="" class="col-lg-12 col-md-12 col-md-12 col-sm-12 col-xs-12">
-    <span style="display: block;">* change the font here *</span>
-    <img src="collage.jpg" style="width: 40%;">
-    <img src="/images/wccccatering.png" style="" class="col-lg-6 col-md-6 col-md-6 col-sm-6 col-xs-6">
-    <img src="/images/wccclogoletters.png" style="" class="col-lg-6 col-md-6 col-md-6 col-sm-6 col-xs-6">
-
-     <iframe id="film" src="https://player.vimeo.com/video/126012689" class="" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-    <p><a href="https://vimeo.com/126012689">engendering</a> from <a href="https://vimeo.com/user24324093">P Chubinskiy</a> on <a href="https://vimeo.com">Vimeo</a>.</p>-->
 
     <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9 col-sm-12 col-xs-12">
       <p class="col-lg-9 copyright">Copyright notice: All art and design copyright Pavlo Chubinskiy &copy;</p>
