--- a/web.html
+++ b/web.html
@@ -130,7 +130,7 @@
 
       <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
         <p class="annotation">
-          <p><a href="http://www.lrngo.com/coolstuff">One of many landing pages I designed</a> for Houston edtech start-up Lrngo.</p>
+          <p><a href="http://www.lrngo.com/coolstuff">One of many</a> landing pages I designed for Houston edtech start-up Lrngo.</p>
         </p>
       </div>
     </div>
