--- a/artwork.html
+++ b/artwork.html
@@ -529,10 +529,12 @@
       </div>
 
       <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-        <p class="annotation"><a href="https://vimeo.com/316818216">curtain call</a> from <a href="https://vimeo.com/316818216">P Chubinskiy</a> on <a href="https://vimeo.com">Vimeo</a>.</p>
+        <p class="annotation"><a href="https://vimeo.com/316818216">curtain call</a> from <a href="https://vimeo.com/user24324093">P Chubinskiy</a> on <a href="https://vimeo.com">Vimeo</a>.</p>
         <p class="">The one who looks like everyone and no one.<a href=""></a></p>
       </div>
     </div>
+
+    <iframe src="https://player.vimeo.com/video/316818216" width="640" height="564" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
 
 
 <!--     <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9 col-sm-12 col-xs-12">
