--- a/artwork.html
+++ b/artwork.html
@@ -529,8 +529,8 @@
       </div>
 
       <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-        <p class="annotation"><a href="https://vimeo.com/316818216">curtain call</a> from <a href="https://vimeo.com/user24324093">P Chubinskiy</a> on <a href="https://vimeo.com">Vimeo</a>.</p>
-        <p class="">The one who looks like everyone and no one.<a href=""></a></p>
+        <p class="annotation"><a href="https://vimeo.com/316818216">The man without qualities</a> from <a href="https://vimeo.com/user24324093">P Chubinskiy</a> on <a href="https://vimeo.com">Vimeo</a>.</p>
+        <p class="">The man without qualities<a href=""></a></p>
       </div>
     </div>
 
